--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,20 @@
 		app:layout_constraintTop_toTopOf="parent" />
 
 	<TextView
+		android:id="@+id/text_a"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="test a"
 		app:layout_constraintTop_toBottomOf="@id/tv_hellow"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintRight_toRightOf="parent" />
+
+	<TextView
+		android:id="@+id/text_b"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="test b"
+		app:layout_constraintTop_toBottomOf="@id/text_a"
 		app:layout_constraintLeft_toLeftOf="parent"
 		app:layout_constraintRight_toRightOf="parent" />
 
